<resources>
    <string name="app_name">Bright Udyog</string>
    <!--<string name="app_name">Example</string>-->
    <string name="dotsoft">Bright Udyog</string>
    <string name="username">Username</string>
    <string name="loginyour">Login to your account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="routecd">RouteCD</string>
    <string name="shop_name">Shop Name</string>
    <string name="view_list">View List</string>
    <string name="pending_bills">Pending Bills</string>
    <string name="owner">Owner Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="pin">Pincode</string>
    <string name="religion">Religion</string>
    <string name="paymentmode">Payment Mode</string>
    <string name="location">LocationName</string>
    <string name="mobile">Mobile Number</string>
    <string name="ph">Phone Number</string>
    <string name="lat">Lat</string>
    <string name="lan">Lang</string>
    <string name="Location">LocationName</string>
    <string name="createdby">CreatedBy</string>
    <string name="submit">Submit</string>
    <string name="pay">Pay</string>
    <string name="no">non</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="maps">GoogleMaps</string>
    <string name="CreateShop">CreateShop</string>
    <string name="ShopsByRoute">Shops By Route</string>
    <string name="update_order">Update Order</string>
    <string name="update_customer">Update Customer</string>
    <string name="myLocation">Current Location</string>
    <string name="endTrip">End Trip</string>
    <string name="login_activity">Login</string>
    <string name="addNew_customer">Add New Customer</string>
    <string name="emailid">Email id</string>
    <string name="remarks">Remarks</string>
    <string name="updateinvoice">Update Invoice</string>
    <string name="orderBooking">OrderBooking</string>
    <string name="isShopClosed">Is ShopClosed</string>
    <string name="orderStatusName">orderStatus Name</string>
    <string name="category">Category Name</string>
    <string name="paymentTermNames">PaymentTerm Names</string>
    <string name="orderDate">Order Date</string>
    <string name="uploadImage">Upload Image</string>
    <string name="shopClosed">ShopClosed</string>
    <string name="isOrdered">Is Ordered</string>
    <string name="isDelivered">Is Delivered</string>
    <string name="shopName">ShopName</string>
    <string name="isInvoice">isInvoice</string>
    <string name="isOrder">isOrder</string>
    <string name="accept">Accept</string>
    <string name="noPlan">No Plan Assigned for you</string>
    <string name="noDataavail">No Data Available</string>

    <string name="zone_code">Zone Code</string>
    <string name="route_code">Route Code</string>
    <string name="area_code">Area Code</string>
    <string name="shop_code">Shop Id</string>
    <string name="welcomenote">Welcome \n to our \n Bright Udyog</string>


    <string name="zone_name">Zone Name</string>
    <string name="area_name">Area Name</string>

    <string name="event_name">Event Name</string>
    <string name="event_date">Date</string>
    <string name="event_Time">Time</string>

    <string name="enter_reminder">Enter Your Remainder</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_Time">Pick Time</string>

    <string name="add">Add</string>
    <string name="total_count">Total Count : 50</string>

    <string name="totalcount">Target Amount</string>
    <string name="month">Month</string>
    <string name="today_count">Sales Amount</string>

    <string name="swipe_left_delete">Swipe left to delete a remainder item</string>
    <string name="swipe_left_delete_order_list">Swipe left to delete a order book list item</string>

    <string name="sales_summary">Sales Summary</string>

    <string name="routeName">Route Name</string>
    <string name="purpose">Purpose</string>
    <string name="routestartDate">Route Start Date</string>
    <string name="routeEndDate">Route End Date</string>
    <string name="targetType">TargetType</string>
    <string name="targetAmount">Target Amount</string>


    <string name="order_list">Order Book List</string>
    <string name="invoice_list">Invoice List</string>

    <string name="come_soon">Come Soon</string>
    <string name="orderno">Order No</string>
    <string name="orderdate">Order Date</string>
    <string name="shopname">Shop Name</string>
    <string name="statuss">Status</string>
    <string name="no_of_prducts">No.of Products</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="gstno">Enter GST No</string>


    <string name="accept_txt">Accept</string>
    <string name="reset_txt">Reset</string>

    <string name="pendingbill_details">Pending Bill Detail :</string>
    <string name="shopname_txt">Shop Name</string>
    <string name="amounttxt">Amount </string>
    <string name="payamount">Pay Amount</string>


    <string name="edit_btn">Edit</string>


    <string name="select_zone">Select Zone</string>
    <string name="select_route">Select Route</string>
    <string name="select_area">Select Area</string>

    <string name="zone_creation">Zone Creation</string>
    <string name="route_creation">Route Creation</string>
    <string name="area_creation">Area Creation</string>

    <string name="master_creation">Master Creation</string>
    <string name="month_summary">Month Summary</string>
    <string name="profilee">Profile</string>

    <string name="pendingbills">Pending Bills</string>


</resources>
