<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/shopName"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/shopName"
                    android:singleLine="true" />
            </LinearLayout>

                <CheckBox
                    android:layout_marginTop="20dp"
                    android:id="@+id/isShopClosed"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/isShopClosed"
                    android:textSize="18sp"/>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/upLoadImage"
                    android:gravity="center"
                    android:background="@drawable/rectangle_pure"
                    android:text="@string/uploadImage"
                    android:textSize="18sp"
                    android:layout_width="180dp"
                    android:layout_height="40dp" />

                <TextView
                    android:id="@+id/shopClosed"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/shopClosed"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/orderDate"
                android:gravity="center|start"
                android:background="@drawable/rectangle_pure"
                android:layout_marginTop="20dp"
                android:text="@string/orderDate"
                android:textSize="18sp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/orderStatusName"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/orderStatusName"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/category"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/category"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/paymentTermName"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/category"
                    android:singleLine="true" />
            </LinearLayout>

            <CheckBox
                android:layout_marginTop="20dp"
                android:id="@+id/isOrdered"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/isOrdered"
                android:textSize="18sp"/>

            <CheckBox
                android:layout_marginTop="20dp"
                android:id="@+id/isDelivered"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/isDelivered"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/submit_rectangle"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>