<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottomHRLID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:background="@color/empty"
        android:gravity="center_vertical"

        android:orientation="vertical">

        <Button
            android:id="@+id/zonecreationbtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:background="@drawable/orderbook_rectangle"
            android:gravity="center"


            android:text="@string/zone_creation"
            android:textAllCaps="false"

            android:textColor="@color/white"
            android:textSize="17sp"
            />

        <Button
            android:id="@+id/routecreationbtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"

            android:background="@drawable/orderbook_rectangle"
            android:gravity="center"


            android:text="@string/route_creation"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            />

        <Button
            android:id="@+id/areacreationbtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/orderbook_rectangle"
            android:gravity="center"
            android:text="@string/area_creation"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            />
    </LinearLayout>
</LinearLayout>
