<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/zone_name_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="Zone Name"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal"
                android:visibility="gone">

                <Spinner
                    android:id="@+id/routeName_spinner"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/routecd"
                    android:singleLine="true"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal"
                android:visibility="visible">

                <Spinner
                    android:id="@+id/routecd"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/routecd"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/area_name"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/routecd"
                    android:singleLine="true"/>
            </LinearLayout>


            <EditText
                android:id="@+id/shopname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/shop_name"
                android:paddingLeft="25dp"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/shop_type_dp"
                    style="@style/spinner_style"

                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:layout_gravity="center"
                    android:hint="ShopType"
                    android:singleLine="true"/>
            </LinearLayout>

            <EditText
                android:id="@+id/ownername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/owner"
                android:paddingLeft="25dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/location_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/location"
                android:paddingLeft="25dp"
                android:singleLine="true"/>


            <EditText
                android:id="@+id/shop_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/shop_address"
                android:paddingLeft="25dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/pin"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:singleLine="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/religion"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"

                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:hint="@string/religion"
                    android:inputType="text"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_whites"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/payment_sp"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"

                    android:layout_gravity="center"
                    android:inputType="text"
                    android:singleLine="true"
                    android:visibility="visible"/>
            </LinearLayout>

            <EditText
                android:id="@+id/payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/paymentmode"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:visibility="gone"/>


            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/mobile"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/ph"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/lat"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/lan"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/createdby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rect_white"
                android:hint="@string/createdby"
                android:inputType="number"
                android:paddingLeft="25dp"
                android:singleLine="true"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/submit_rectangle"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>