<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/evenNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/order_rectangle"
            android:hint="@string/enter_reminder"
            android:inputType="textCapWords|textCapSentences|text|textNoSuggestions"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#595959"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/dateAndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/HeaderColor"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectDate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#00b386"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/selectTime"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#00b386"
                android:onClick="showTimePickerDialog"
                android:text="@string/pick_Time"
                android:textAllCaps="false"
                android:textColor="@color/white"/>
        </LinearLayout>

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:background="@drawable/rect_green"
            android:padding="10dp"

            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="17sp"/>
    </LinearLayout>
</LinearLayout>
